# BikePathNet

./: .gitignore  Manifest.toml  Project.toml  README.md  conda-env.yml  pyproject.toml  python_package_versions.txt  requirements.txt  setup.cfg
data/csvs/: hh_cleaned.csv
data/polygons/: hh.json
docs/: Project.toml  make.jl
docs/src/: api_reference.md  index.md
docs/src/documentation/: 0_experiments.md
docs/src/extending_bike_path_net/: 1_minmodes.md  2_shortest_path_aggregators.md
docs/src/getting_started/: 0_installation.md  1_quickstart.md  2_tutorial.md
examples/: hh_algorithm.py  hh_plot.py  hh_prep.py  params.py  paths.py
examples/data/csv/: hh_hom_1.csv  hh_hom_10.csv  hh_hom_2.csv  hh_hom_3.csv  hh_hom_4.csv  hh_hom_5.csv  hh_hom_6.csv  hh_hom_7.csv  hh_hom_8.csv  (+1 more)
scripts/: cph_data.ipynb  cph_ordering.ipynb  cph_plot.ipynb  cph_run.jl  hh_plot.py  hh_prep.py  hh_run.jl  setup_params.jl  setup_params.py  setup_paths.jl  setup_paths.py
src/: BikePathNet.jl  README.md  __init__.py  algorithm.jl  algorithm.py  algorithm_config.jl  algorithm_helper.jl  comparison_state.jl  cyclist.jl  data.py  data_helper.py  docstrings.jl  edge.jl  experiment.jl  graph.jl  graph_loading.jl  graph_measures.jl  graph_preparation.jl  induced_demand.jl  loads_on_streets.jl  logging.jl  logging_helper.jl  minmodes.jl  node.jl  params_io.jl  penalties.jl  plot.py  plot_helper.py  setup_helper.py  shortest_paths.jl  shortestpath.jl  trip.jl
src/BikePathNet/: __init__.py
src/prep_and_plot/: __init__.py  data.py  data_helper.py  plot.py  plot_helper.py  setup_helper.py
(+11 files in other folders)
