[metadata]
name = BikePathNet
version = 0.0.1
author = Christoph Steinacker
author_email = christoph.steinacker@tu-dresden.de
description = A small example package to improve the bikeability of urban bike path networks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src